--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jra Software - App e Sites</title>
+    <title>Compra Express SP</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7536243452192323"
     crossorigin="anonymous"></script>
 
@@ -101,11 +101,7 @@
                      Campos Elíseos-Rua General Julio de Marcondes Salgado, 58 , CEP:01216-000</br>
                      Associação da Vida Verde Topybol   
                     </p> 
-                    <span class="material-icons">
-                        phonelink_ring
-                    </span   ><a href="https://www.asaas.com/c/867107711242" target="_parent">Gerar boleto</a> <br/>
-
-
+                   
 
                     <h3>Dúvidas</h3>
                     <h3>
