--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <main>
         <section class="module parallax parallax-1">
             <h1>
-                    Compra Express em São Paulo <br/>
+                    Compra Express<br/>
                     
             </h1>
         </section>
