--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     <div class="wrapper">
      <main>
         <section class="module parallax parallax-1">
-            <h2>
-                    Compra Express-São Paulo<br/>
-                    
-            </h2>
+            <h2> Compra Express-São Paulo<br/></h2>
         </section>
         <section class="module content">
             <div class="container" >
