--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
                     <h3>
                         <span class="material-icons">
                             email
-                        </span> ja13039787@gmail.com <br/>
-                        
+                        </span>devalves2020@gmail.com <br/>
+                        </span>https://metaverso77.my.canva.site/portal77<br/>
+                        </span>https://loja77.netlify.app<br/>
+                        </span>https://site-paypal.vercel.app<br/>
                         <span class="material-icons">
                             phonelink_ring
                         </span> (11)98624-4329<br/>
